--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://db.pxwyiyablvxkfyoekoul.supabase.co:5432/postgres
 
+spring.datasource.username=postgres
+
+spring.datasource.password=1005711531prueba
