--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://db.pxwyiyablvxkfyoekoul.supabase.co:5432/postgres
-
-spring.datasource.username=postgres
-
-spring.datasource.password=1005711531prueba
+spring.datasource.url= jdbc:postgresql://db.mhkrodpgcgajflikbxjy.supabase.co:5432/postgres
+spring.datasource.username= postgres
+spring.datasource.password= devmasterciclo3
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
