--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url= jdbc:postgresql://db.mhkrodpgcgajflikbxjy.supabase.co:5432/postgres
-spring.datasource.username= postgres
-spring.datasource.password= devmasterciclo3
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:postgresql://localhost:5432/BDciclo3
+spring.datasource.username=postgres
+spring.datasource.password=123456*
+spring.jpa.hibernate.ddl-auto=update
