--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/BDciclo3
+spring.datasource.url=jdbc:postgresql://localhost:5432/ciclo3
 spring.datasource.username=postgres
-spring.datasource.password=123456*
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.format.date = yyyy-MM-dd
