Creación de Página con categorias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ciclo3
+spring.datasource.url=jdbc:postgresql://localhost:5432/prueba
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=EMB441406
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.format.date = yyyy-MM-dd
